# opttransport

./: CMakeLists.txt  Optimal_transportation.cpp  Optimal_transportation.hpp  Optimal_transportation.ui  README.md
cmake/: FindUMFPACK.cmake
include/CGAL/: Ray_2_Polygon_2_intersection.h
include/OT/: Decomposition_2.hpp  Density_base_2.hpp  Density_decomposition_2.hpp  Discrete_measure_2.hpp  Function_with_workspace.hpp  Image_density_2.hpp  Lloyd_energy_2.hpp  Uniform_density_2.hpp  aurenhammer_fp.hpp  bfgs_descent.hpp  bundle_descent.hpp  gradient_descent.hpp  integration.hpp  intersection.hpp  intersection_orourke.hpp  line_search.hpp  lloyd.hpp  misc.hpp  newton_descent.hpp  objective_function.hpp  random.hpp  rasterization.hpp  serialization.hpp  subgradient_descent.hpp  tessellation.hpp
resources/: Optimal_transportation.qrc  Optimal_transportation_2.qrc
tests/: CMakeLists.txt  test_rasterization.cpp  test_wasserstein.cpp
tools/: CMakeLists.txt  decompose_2.cpp  misc.hpp  view_decomposition_2.cpp  wasserstein_2.cpp
